@@ -1,3 +1,6 @@
+Nov 15, 2022
+  added Saltzman project: study_id=1047, exp_id=18000000058
+
 Nov 9, 2022
   fixes in parsing; improved loading of qualitative data
 
